--- a/p2.html
+++ b/p2.html
@@ -32,7 +32,7 @@
 
                 
                 $scope.removeItem = function (index) {
-                    $scope.shoppingItems.splice(index, 2,'onion');
+                    $scope.shoppingItems.splice(index, 1);
                 };
             });
     </script>
